Feature: set timeout on gnsrt requests and return manual investigation when...
Feature: set timeout on gnsrt requests and return manual investigation when timeout occurs (ALFA-284)

Closes ALFA-284

Reviewed-by: Witold Zegarowski <wzegarowski@silenteight.com>
Reviewed-by: Sławomir Korbas <skorbas@silenteight.com>
Reviewed-by: Szymon Mrozowski <smrozowski@silenteight.com>
Merged from: https://gitlab.silenteight.com/sens/scb-bridge/-/merge_requests/201